Support Bearer Token Authentication
Current documentation (07/20/2017) stipulates the use of a Bearer token rather than the OAuth token authentication scheme using the AuthenticationCode path

--- a/AxosoftAPI.NET/AxosoftAPI.NET.csproj
+++ b/AxosoftAPI.NET/AxosoftAPI.NET.csproj
@@ -164,6 +164,7 @@
     <Compile Include="ScopeEnum.cs" />
     <Compile Include="SecurityRoles.cs" />
     <Compile Include="Tasks.cs" />
+    <Compile Include="TokenTypeEnum.cs" />
     <Compile Include="Users.cs" />
     <Compile Include="VersionEnum.cs" />
     <Compile Include="Workflows.cs" />
